--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Courier New";
-  background: linear-gradient(89deg, #FF5EDF 0%, #04C8DE 100%);
+  font-family: 'Dosis', sans-serif;
+  letter-spacing: 2px;
+  background: linear-gradient(to right bottom, rgb(243, 234, 58) 0px, rgb(16, 199, 237) 100%) fixed;
 }
 
 code {
